# social-networking

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
docs/: index.md
docs/api/: auth.md  core.md  platforms.md  utils.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: authentication.md  error-handling.md  rate-limiting.md
examples/: README.md  batch_example.py  twitter_example.py
scripts/: dev.py
src/social_integrator/: __init__.py  main.py
src/social_integrator/auth/: auth_manager.py
src/social_integrator/core/: config.py  platform.py
src/social_integrator/utils/: backoff.py  error_correlation.py  metrics.py  rate_limiting.py
tests/: conftest.py
tests/integration/: README.md  test_twitter.py
tests/unit/: test_auth_manager.py  test_config.py  test_models.py  test_rate_limiting.py  test_twitter_auth.py  test_twitter_batch.py  test_twitter_content.py  test_twitter_http.py  test_twitter_media.py  test_twitter_metrics.py
tests/unit/auth/: conftest.py  test_auth_manager.py  test_token_info.py  test_token_store.py
tests/unit/core/: conftest.py  test_rate_limiting.py
tests/unit/integrator/: test_integrator.py
tests/unit/retry/: conftest.py
tests/unit/utils/: conftest.py  test_backoff.py  test_error_correlation.py  test_metrics.py  test_rate_limiting_advanced.py
tests/utils/: timing.py
(+12 files in other folders)
